deploy/apps/meshwiki/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: meshwiki
  labels:
    istio-injection: enabled
