deploy/apps/meshwiki/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: meshwiki
  namespace: meshwiki
spec:
  selector:
    app: meshwiki
  ports:
  - port: 80
    targetPort: 8000
